--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hexo-generator-postmap",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "A plugin for the Hexo static site generator that generates an archive page with geo-tagged posts and pages on an interactive google map",
   "main": "index.js",
   "scripts": {
@@ -26,5 +26,5 @@
     "url" : "https://github.com/jamiei/hexo-generator-postmap.git"
   },
   "license": "MIT",
-  "readme": "README.md"
+  "readme": "https://github.com/jamiei/hexo-generator-postmap/blob/master/README.md"
 }
